// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SubmitButton/> Render load 1`] = `
<div>
  <button
    class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
    disabled=""
    type="submit"
  >
    <span
      aria-hidden="true"
      class="spinner-border spinner-border-sm me-1"
      role="status"
    />
    <span>
      Load settings
    </span>
  </button>
</div>
`;

exports[`<SubmitButton/> Render ready 1`] = `
<div>
  <button
    class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
    type="submit"
  >
    <span>
      Save
    </span>
  </button>
</div>
`;

exports[`<SubmitButton/> Render saving 1`] = `
<div>
  <button
    class="btn btn-primary col-12 col-md-3 col-lg-2 d-inline-flex justify-content-center align-items-center"
    disabled=""
    type="submit"
  >
    <span
      aria-hidden="true"
      class="spinner-border spinner-border-sm me-1"
      role="status"
    />
    <span>
      Updating
    </span>
  </button>
</div>
`;
